--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,12 +49,11 @@ jobs:
         pytest tests/
   macOS:
     name: Mac
-    needs: [Install_dependencies]
     runs-on: macos-12
     strategy:
-      matrix:
-        python-version: [3.8.14]
-  steps:
+        matrix:
+          python-version: [3.8.14]
+    steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
@@ -65,6 +64,12 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         pip install -r requirements.txt -r dev_requirements.txt --timeout 45
+    - uses: actions/download-artifact@v3
+      with:
+        name: artifact
+    
+    - name: Display structure of downloaded files
+      run: ls -R
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
