--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         pip install -r requirements.txt -r dev_requirements.txt --timeout 45
-    - uses: actions/download-artifact@v3
+    - uses: actions/upload-artifact@v3.1.2
       with:
         name: artifact
     
